follow better package naming conventions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "theEqualizer",
+	"name": "the_equalizer",
 	"version": "0.0.0",
 	"description": "A Discord Bot Built For Democracy",
 	"homepage": "https://github.com/ZLima12/TheEqualizer",
