--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 	"dependencies":
 	{
 		"discord.js": ">=11.0.0",
-		"typescript": "*"
+		"typescript": "*",
+		"is-online": "*"
 	},
 
 	"scripts":
