--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
 		"discord.js"
 	],
 	"dependencies": {
-		"@types/node": ">=8.0.25",
+		"@types/node": "^8.0.53",
 		"discord.js": ">=11.0.0",
 		"erlpack": "github:discordapp/erlpack",
-		"typescript": ">=2.4.2",
-		"uws": ">=8.14.1"
+		"typescript": "^2.6.1",
+		"uws": "^9.14.0"
 	},
 	"scripts": {
 		"install": "tsc",
