--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"uws": "^9.14.0"
 	},
 	"scripts": {
-		"install": "tsc",
+		"install": "tsc -p tsconfig.release.json",
 		"start": "node js/the-equalizer.js"
 	}
 }
