--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	],
 	"dependencies": {
 		"@types/node": "^8.0.53",
-		"discord.js": ">=11.0.0",
+		"discord.js": "^11.3.0",
 		"erlpack": "github:discordapp/erlpack",
 		"typescript": "^2.6.2",
 		"uws": "^9.14.0"
