--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@discordjs/uws": "^11.149.1",
 		"@types/node": "^10.14.21",
+		"@zlima12/file-directories": "^1.0.2",
 		"dblapi.js": "^1.2.1",
 		"discord.js": "^11.5.1",
 		"erlpack": "hammerandchisel/erlpack",
